Fixed issue of deck name overflowing in header of SelectedDeck.

--- a/client/flip/src/compononents/common/SelectedDeck/SelectedDeck.module.css
+++ b/client/flip/src/compononents/common/SelectedDeck/SelectedDeck.module.css
@@ -45,6 +45,9 @@
     font-size: 40px;
     color: var(--background-yellow);
     z-index: 2;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .icon {
